[package]
name = "openh264-sys2"
description = "Low-level bindings for OpenH264."
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["multimedia", "encoding", "video"]
categories = ["api-bindings", "multimedia::video"]
version = "0.2.14"
edition = "2018"
documentation = "https://docs.rs/openh264-sys2/"
repository = "https://github.com/ralfbiedert/openh264-rust"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["decoder", "encoder"]
decoder = []
encoder = []
asm = ["nasm-rs"]
#static_cpp = []

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
walkdir = "2.3"
nasm-rs = { version = "0.2", features = ["parallel"], optional = true }
