[package]
name = "openh264-sys2"
description = "Low-level bindings for OpenH264."
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["multimedia", "encoding", "video"]
categories = ["api-bindings", "multimedia::video"]
version = "0.6.6"
edition = "2021"
documentation = "https://docs.rs/openh264-sys2/"
repository = "https://github.com/ralfbiedert/openh264-rust"
license = "BSD-2-Clause"

exclude = [
    "**/*.dll"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["source"]
source = []
libloading = ["dep:libloading", "dep:sha2"]

[dependencies]
libloading = { version = "0.8.1", optional = true }
sha2 = { version = "0.10.8", optional = true }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
walkdir = "2.3"
nasm-rs = { version = "0.3.0" }
