[package]
name = "openh264-sys2"
description = "Low-level bindings for OpenH264."
keywords = ["multimedia", "encoding", "video"]
categories = ["api-bindings", "multimedia::video"]
documentation = "https://docs.rs/openh264-sys2/"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

exclude = [
    "**/*.dll"
]

[features]
default = ["source"]
source = []
libloading = ["dep:libloading", "dep:sha2"]

[dependencies]
libloading = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[build-dependencies]
cc = { workspace = true, features = ["parallel"] }
walkdir.workspace = true
nasm-rs.workspace = true
