[package]
name = "openh264"
description = "Idiomatic bindings for OpenH264."
authors = ["Ralf Biedert <rb@xr.io>"]
keywords = ["multimedia", "encoding", "video"]
categories = ["api-bindings", "multimedia::video"]
version = "0.6.0"
edition = "2021"
rust-version = "1.65"
license = "BSD-2-Clause"
documentation = "https://docs.rs/openh264/"
repository = "https://github.com/ralfbiedert/openh264-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["source"]
source = ["openh264-sys2/source"]
libloading = ["openh264-sys2/libloading"]
backtrace = [] # Remove once backtrace feature is stable.


[dependencies]
openh264-sys2 = { path = "../openh264-sys2", version = "0.6.0", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
image = "0.24.6"
image-compare = "0.3.0"

mp4 = "0.14.0"
anyhow = "1.0.71"

[[example]]
name = "mp4"
